# bitrep

./: CMakeLists.txt  LICENSE  README.md
src/: br_transcendentals.cpp  br_transcendentals.h  convreduce.cpp  convreduce.h  reduce.cpp  reduce.h
test/: multiprocess.cpp  singleprocess.cpp
